// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletButton Should match snapshot and display connect wallet 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: #295FF4;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c0:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c0:hover:enabled {
  border-color: #fff;
}

.c0:active:enabled {
  border: 1px solid #303338;
}

<div>
   
  <button
    class="c0"
    data-testid="connectWalletBtn"
  >
    connectWallet
  </button>
   
</div>
`;

exports[`WalletButton Should match snapshot and display connected address 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: transparent;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c0:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c0:hover:enabled {
  border-color: #fff;
}

.c0:active:enabled {
  border: 1px solid #303338;
}

.c0:disabled {
  color: #303338;
}

.c1 svg,
.c1 img {
  margin-right: .4rem;
}

.c1,
.c1 button {
  padding: .25rem 0.6rem;
  background-color: #1B1D1F;
}

.c4 {
  height: 1.6rem;
  width: 1.6rem;
}

.c5 {
  border-radius: 50%;
  height: 24px;
  width: 24px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 img {
  border-radius: 50%;
  margin-right: 0;
}

.c2 {
  margin-top: 0;
  margin-bottom: 0;
  padding: 0.3rem;
}

.c6 {
  margin-left: 0.2rem;
  margin-right: 0.3rem;
}

@media only screen and (min-width:768px) {
  .c3 {
    margin-right: 0.3rem;
  }
}

@media only screen and (min-width:768px) {
  .c2 {
    padding: 0.3rem 0.5rem;
  }
}

<div>
   
  <button
    class="c0 c1 c2"
    type="submit"
  >
    <span
      class="c3"
    >
      <img
        alt="Avatar"
        class="c4 c5"
        data-testid="avatar"
        size="24"
        src="test"
      />
    </span>
    <span
      class="c6"
    >
      test.eth
    </span>
  </button>
   
</div>
`;
